messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  labels:
    app: django-messaging
spec:
  type: ClusterIP
  selector:
    app: django-messaging
    version: blue  # Switch between 'blue' and 'green' to change traffic routing
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: django-service-blue
  labels:
    app: django-messaging
    version: blue
spec:
  type: ClusterIP
  selector:
    app: django-messaging
    version: blue
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: django-service-green
  labels:
    app: django-messaging
    version: green
spec:
  type: ClusterIP
  selector:
    app: django-messaging
    version: green
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
